Revert "MIFOS-4385: refactoring of PersonAction"
This reverts commit 2c685891d959bd75726b2836a56a5d118415b9cc.